--- a/css/styles.css
+++ b/css/styles.css
@@ -731,61 +731,64 @@ img {
 
 
 /* Modal Styles */
-/* Modal Styles */
 .backdrop {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(46, 47, 66, 0.4);
-    display: flex;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
     justify-content: center;
     align-items: center;
     z-index: 1000;
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.is-hidden {
-    opacity: 0;
-    visibility: hidden;
+.backdrop.is-open {
+    display: flex;
 }
 
 .modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 408px;
-    min-height: 584px;
-    background-color: #fcfcfc;
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.1), 0px 2px 2px rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
+    background-color: #fff;
     padding: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    max-width: 500px;
+    width: 100%;
+    position: relative;
+    text-align: center;
 }
 
 .close-button {
+    background: none;
+    border: none;
     position: absolute;
-    top: 24px;
-    right: 24px;
-    width: 24px;
-    height: 24px;
-    background-color: #e7e9fc;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    top: 8px;
+    right: 8px;
     cursor: pointer;
     padding: 0;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    width: 24px;
+    height: 24px;
 }
 
-.close-button:hover {
-    background-color: #d1d3e0;
+.close-icon {
+    position: relative;
+    width: 24px;
+    height: 24px;
+}
+
+.close-icon use {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.close-button:hover .close-icon use,
+.close-button:focus .close-icon use {
+    fill: #404bbf;
 }
 
 .modal-title {
@@ -802,7 +805,6 @@ img {
 .modal-form .form-group {
     margin-bottom: 15px;
     text-align: left;
-    width: 100%;
 }
 
 .modal-form .form-group label {
@@ -827,14 +829,8 @@ img {
 }
 
 .input-wrapper input {
-    width: calc(100% - 40px);
     padding-left: 40px;
-    padding-right: 8px;
-    height: 40px;
-    margin: 0 8px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: 14px;
+    
 }
 
 .input-wrapper input:focus+.icon,
@@ -842,6 +838,7 @@ img {
     fill: #4d5ae5;
 }
 
+.modal-form .form-group input,
 .modal-form .form-group textarea {
     width: calc(100% - 16px);
     padding: 8px;
@@ -851,6 +848,7 @@ img {
     font-size: 14px;
 }
 
+.modal-form .form-group input:focus,
 .modal-form .form-group textarea:focus {
     border-color: #4d5ae5;
     outline: none;
@@ -862,6 +860,7 @@ img {
     justify-content: flex-start;
     margin-top: 10px;
     margin-left: 8px;
+    
 }
 
 .modal-form .form-group.checkbox-group input {
@@ -873,6 +872,7 @@ img {
     color: #333;
     margin-bottom: 0;
     line-height: normal;
+   
 }
 
 .modal-form .form-group.checkbox-group a {
