--- a/css/styles.css
+++ b/css/styles.css
@@ -55,10 +55,10 @@ img {
     padding-top: 120px;
     padding-bottom: 120px;
 }
+
 .section-first {
     padding: 188px 0;
 }
-
 
 /* Header styles */
 .header {
@@ -116,13 +116,11 @@ img {
 
 .nav-link.current {
     color: #404bbf;
-    
 }
 
 .current {
     position: relative;
     color: #404BBF;
-
 }
 
 .current::after {
@@ -134,13 +132,7 @@ img {
     border-radius: 2px;
     height: 4px;
     width: 100%;
-
-
 }
-
-
-
-
 
 .nav-link:hover,
 .nav-link:focus {
@@ -184,9 +176,7 @@ img {
 }
 
 .feature-item {
-   
-    width: calc((100% - 72px) / 4)
-   
+    width: calc((100% - 72px) / 4);
 }
 
 .feature-title {
@@ -197,11 +187,7 @@ img {
     left: 0;
     margin-bottom: 8px;
     color: #2E2F42;
-    
 }
-
-
-
 
 .feature-button {
     font-family: 'Roboto', sans-serif;
@@ -223,7 +209,6 @@ img {
     border-radius: 4px;
 }
 
-
 .feature-description {
     font-size: 16px;
     font-weight: 400;
@@ -231,6 +216,7 @@ img {
     letter-spacing: 0.02em;
     color: #434455;
 }
+
 :root {
     --border-color: #8e8f99;
     --icon-fill-color: #f4f4fd;
@@ -241,9 +227,8 @@ img {
 }
 
 .icon {
-   
     fill: var(--icon-fill-color);
-} 
+}
 
 .hero {
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url('../images/hero.jpg');
@@ -260,8 +245,6 @@ img {
     text-align: center;
 }
 
-
-
 .hero-title {
     font-size: 56px;
     font-weight: 700;
@@ -274,7 +257,6 @@ img {
     max-width: 496px;
     text-align: center;
 }
-
 
 .hero-button {
     font-family: 'Roboto', sans-serif;
@@ -296,6 +278,7 @@ img {
     border-radius: 4px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .hero-button:hover,
 .hero-button:focus {
     background-color: #404bbf;
@@ -310,7 +293,6 @@ img {
     display: flex;
     gap: 24px;
 }
-
 
 .icon-container {
     display: flex;
@@ -328,15 +310,10 @@ img {
     height: 64px;
 }
 
-
-
-
 /* section "Our Team" */
 
 .team {
-    
     background-color: #F4F4FD;
-           
 }
 
 .team-container {
@@ -365,10 +342,6 @@ img {
     border: 1px solid #e7e9fc;
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
-   
-    
-    
-   
 }
 
 .team-member:hover {
@@ -376,15 +349,12 @@ img {
 }
 
 .team-member:first-child {
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-        0px 1px 1px rgba(46, 47, 66, 0.16),
-        0px 2px 1px rgba(46, 47, 66, 0.08);
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
+
 .team-photo {
-    
     width: 100%;
     height: auto;
-    
 }
 
 .team-info {
@@ -400,7 +370,7 @@ img {
     letter-spacing: 0.02em;
     text-align: center;
     color: #2e2f42;
-    margin-bottom: 8px
+    margin-bottom: 8px;
 }
 
 .team-position {
@@ -433,10 +403,7 @@ img {
     align-items: center;
     justify-content: center;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-       
-    }
-    
-  
+}
 
 .social-icon:hover {
     background-color: #404bbf;
@@ -445,8 +412,6 @@ img {
 :root {
     --icon-fill-color: #f4f4fd;
 }
-
-
 
 .team-member a:focus {
     background-color: #404bbf;
@@ -473,52 +438,35 @@ img {
 }
 
 .icon {
-   
     fill: var(--icon-fill-color);
 }
+
 /* Portfolio styles */
 
 .description-text {
     position: absolute;
-    
     top: 0;
-  
     font-size: 16px;
-  
     line-height: 1.5;
-    
     letter-spacing: 0.02em;
-   
     color: var(--description-color, #f4f4fd);
-    
     padding: 40px 32px;
-    
     background-color: #4d5ae5;
-    
     height: 100%;
-   
     width: 100%;
-   
     transform: translateY(100%);
-    
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
 }
-
 
 .image-container {
     position: relative;
-
     overflow: hidden;
-   
 }
 
 .portfolio-item:hover .description-text,
 .portfolio-item:focus .description-text {
     transform: translateY(0);
-  
 }
-
 
 .portfolio-container {
     padding-top: 120px;
@@ -567,9 +515,7 @@ img {
     line-height: 24px;
     letter-spacing: 0.02em;
     color: #2e2f42;
-   
     text-align: left;
- 
     margin-bottom: 8px;
 }
 
@@ -580,6 +526,7 @@ img {
     text-align: left;
     color: #434455;
 }
+
 .portfolio-item:hover {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -599,7 +546,6 @@ img {
 .footer {
     background-color: #2e2f42;
     padding: 100px 0;
-   
 }
 
 .footer .container {
@@ -609,7 +555,6 @@ img {
 
 .footer-content {
     margin-right: 120;
-
 }
 
 .footer-logo {
@@ -635,10 +580,7 @@ img {
     letter-spacing: 0.02em;
     color: #F4F4FD;
     max-width: 264px;
-    
 }
-
-
 
 .footer-social-text {
     font-size: 16px;
@@ -648,8 +590,6 @@ img {
     margin-bottom: 16px;
     color: #FFFFFF;
 }
-
-
 
 .social-icon-item-footer {
     display: flex;
@@ -688,47 +628,19 @@ img {
 
 .footer .social-icon:hover .icon {
     fill: #404bbf;
-   
 }
-
 
 .social-icons-footer {
     display: flex;
     justify-content: center;
     gap: 16px;
-    
     padding: 0;
-    
     list-style: none;
-    
 }
 
-.social-icon-item-footer {
-    display: flex;
-}
-
-.social-icon-footer {
-    width: 40px;
-    height: 40px;
-    background-color: #4d5ae5;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: background-color 0.3s;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.social-icon-footer:hover {
-    background-color: #404bbf;
-}
 .footer-content {
     margin-right: 120px;
 }
-
-
-
-
 
 /* Modal Styles */
 .backdrop {
@@ -750,7 +662,7 @@ img {
 
 .modal {
     background-color: #fff;
-    padding: 20px;
+    padding: 72px 24px 24px 24px;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     max-width: 500px;
@@ -763,8 +675,8 @@ img {
     background: none;
     border: none;
     position: absolute;
-    top: 8px;
-    right: 8px;
+    top: 24px;
+    right: 24px;
     cursor: pointer;
     padding: 0;
     width: 24px;
@@ -830,7 +742,6 @@ img {
 
 .input-wrapper input {
     padding-left: 40px;
-    
 }
 
 .input-wrapper input:focus+.icon,
@@ -860,7 +771,6 @@ img {
     justify-content: flex-start;
     margin-top: 10px;
     margin-left: 8px;
-    
 }
 
 .modal-form .form-group.checkbox-group input {
@@ -872,7 +782,6 @@ img {
     color: #333;
     margin-bottom: 0;
     line-height: normal;
-   
 }
 
 .modal-form .form-group.checkbox-group a {
