--- a/css/styles.css
+++ b/css/styles.css
@@ -116,11 +116,13 @@ img {
 
 .nav-link.current {
     color: #404bbf;
+
 }
 
 .current {
     position: relative;
     color: #404BBF;
+
 }
 
 .current::after {
@@ -176,7 +178,7 @@ img {
 }
 
 .feature-item {
-    width: calc((100% - 72px) / 4);
+    width: calc((100% - 72px) / 4)
 }
 
 .feature-title {
@@ -370,7 +372,7 @@ img {
     letter-spacing: 0.02em;
     text-align: center;
     color: #2e2f42;
-    margin-bottom: 8px;
+    margin-bottom: 8px
 }
 
 .team-position {
@@ -638,6 +640,26 @@ img {
     list-style: none;
 }
 
+.social-icon-item-footer {
+    display: flex;
+}
+
+.social-icon-footer {
+    width: 40px;
+    height: 40px;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 0.3s;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-icon-footer:hover {
+    background-color: #404bbf;
+}
+
 .footer-content {
     margin-right: 120px;
 }
@@ -665,7 +687,8 @@ img {
     padding: 72px 24px 24px 24px;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    max-width: 500px;
+    max-width: 408px;
+    min-height: 584px;
     width: 100%;
     position: relative;
     text-align: center;
@@ -681,12 +704,24 @@ img {
     padding: 0;
     width: 24px;
     height: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #e7e9fc;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.14), 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.20);
+    border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-button:hover,
+.close-button:focus {
+    background-color: #7e7e9c;
 }
 
 .close-icon {
     position: relative;
-    width: 24px;
-    height: 24px;
+    width: 16px;
+    height: 16px;
 }
 
 .close-icon use {
@@ -711,17 +746,17 @@ img {
     letter-spacing: 0.02em;
     color: #2e2f42;
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 24px;
 }
 
 .modal-form .form-group {
-    margin-bottom: 15px;
+    margin-bottom: 24px;
     text-align: left;
 }
 
 .modal-form .form-group label {
     display: block;
-    margin-bottom: 5px;
+    margin-bottom: 8px;
     font-size: 14px;
     color: #333;
 }
