--- a/css/styles.css
+++ b/css/styles.css
@@ -55,10 +55,10 @@ img {
     padding-top: 120px;
     padding-bottom: 120px;
 }
-
 .section-first {
     padding: 188px 0;
 }
+
 
 /* Header styles */
 .header {
@@ -116,7 +116,7 @@ img {
 
 .nav-link.current {
     color: #404bbf;
-
+    
 }
 
 .current {
@@ -134,7 +134,13 @@ img {
     border-radius: 2px;
     height: 4px;
     width: 100%;
+
+
 }
+
+
+
+
 
 .nav-link:hover,
 .nav-link:focus {
@@ -178,7 +184,9 @@ img {
 }
 
 .feature-item {
+   
     width: calc((100% - 72px) / 4)
+   
 }
 
 .feature-title {
@@ -189,7 +197,11 @@ img {
     left: 0;
     margin-bottom: 8px;
     color: #2E2F42;
+    
 }
+
+
+
 
 .feature-button {
     font-family: 'Roboto', sans-serif;
@@ -211,6 +223,7 @@ img {
     border-radius: 4px;
 }
 
+
 .feature-description {
     font-size: 16px;
     font-weight: 400;
@@ -218,7 +231,6 @@ img {
     letter-spacing: 0.02em;
     color: #434455;
 }
-
 :root {
     --border-color: #8e8f99;
     --icon-fill-color: #f4f4fd;
@@ -229,8 +241,9 @@ img {
 }
 
 .icon {
+   
     fill: var(--icon-fill-color);
-}
+} 
 
 .hero {
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url('../images/hero.jpg');
@@ -247,6 +260,8 @@ img {
     text-align: center;
 }
 
+
+
 .hero-title {
     font-size: 56px;
     font-weight: 700;
@@ -259,6 +274,7 @@ img {
     max-width: 496px;
     text-align: center;
 }
+
 
 .hero-button {
     font-family: 'Roboto', sans-serif;
@@ -280,7 +296,6 @@ img {
     border-radius: 4px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .hero-button:hover,
 .hero-button:focus {
     background-color: #404bbf;
@@ -295,6 +310,7 @@ img {
     display: flex;
     gap: 24px;
 }
+
 
 .icon-container {
     display: flex;
@@ -312,10 +328,15 @@ img {
     height: 64px;
 }
 
+
+
+
 /* section "Our Team" */
 
 .team {
+    
     background-color: #F4F4FD;
+           
 }
 
 .team-container {
@@ -344,6 +365,10 @@ img {
     border: 1px solid #e7e9fc;
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+   
+    
+    
+   
 }
 
 .team-member:hover {
@@ -351,12 +376,15 @@ img {
 }
 
 .team-member:first-child {
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
 }
-
 .team-photo {
+    
     width: 100%;
     height: auto;
+    
 }
 
 .team-info {
@@ -405,7 +433,10 @@ img {
     align-items: center;
     justify-content: center;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+       
+    }
+    
+  
 
 .social-icon:hover {
     background-color: #404bbf;
@@ -414,6 +445,8 @@ img {
 :root {
     --icon-fill-color: #f4f4fd;
 }
+
+
 
 .team-member a:focus {
     background-color: #404bbf;
@@ -440,35 +473,52 @@ img {
 }
 
 .icon {
+   
     fill: var(--icon-fill-color);
 }
-
 /* Portfolio styles */
 
 .description-text {
     position: absolute;
+    
     top: 0;
+  
     font-size: 16px;
+  
     line-height: 1.5;
+    
     letter-spacing: 0.02em;
+   
     color: var(--description-color, #f4f4fd);
+    
     padding: 40px 32px;
+    
     background-color: #4d5ae5;
+    
     height: 100%;
+   
     width: 100%;
+   
     transform: translateY(100%);
+    
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
 }
+
 
 .image-container {
     position: relative;
+
     overflow: hidden;
+   
 }
 
 .portfolio-item:hover .description-text,
 .portfolio-item:focus .description-text {
     transform: translateY(0);
+  
 }
+
 
 .portfolio-container {
     padding-top: 120px;
@@ -517,7 +567,9 @@ img {
     line-height: 24px;
     letter-spacing: 0.02em;
     color: #2e2f42;
+   
     text-align: left;
+ 
     margin-bottom: 8px;
 }
 
@@ -528,7 +580,6 @@ img {
     text-align: left;
     color: #434455;
 }
-
 .portfolio-item:hover {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -548,6 +599,7 @@ img {
 .footer {
     background-color: #2e2f42;
     padding: 100px 0;
+   
 }
 
 .footer .container {
@@ -557,6 +609,7 @@ img {
 
 .footer-content {
     margin-right: 120;
+
 }
 
 .footer-logo {
@@ -582,7 +635,10 @@ img {
     letter-spacing: 0.02em;
     color: #F4F4FD;
     max-width: 264px;
+    
 }
+
+
 
 .footer-social-text {
     font-size: 16px;
@@ -592,6 +648,8 @@ img {
     margin-bottom: 16px;
     color: #FFFFFF;
 }
+
+
 
 .social-icon-item-footer {
     display: flex;
@@ -630,14 +688,19 @@ img {
 
 .footer .social-icon:hover .icon {
     fill: #404bbf;
+   
 }
+
 
 .social-icons-footer {
     display: flex;
     justify-content: center;
     gap: 16px;
+    
     padding: 0;
+    
     list-style: none;
+    
 }
 
 .social-icon-item-footer {
@@ -659,10 +722,13 @@ img {
 .social-icon-footer:hover {
     background-color: #404bbf;
 }
-
 .footer-content {
     margin-right: 120px;
 }
+
+
+
+
 
 /* Modal Styles */
 .backdrop {
@@ -684,11 +750,10 @@ img {
 
 .modal {
     background-color: #fff;
-    padding: 72px 24px 24px 24px;
+    padding: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    max-width: 408px;
-    min-height: 584px;
+    max-width: 500px;
     width: 100%;
     position: relative;
     text-align: center;
@@ -698,30 +763,18 @@ img {
     background: none;
     border: none;
     position: absolute;
-    top: 24px;
-    right: 24px;
+    top: 8px;
+    right: 8px;
     cursor: pointer;
     padding: 0;
     width: 24px;
     height: 24px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #e7e9fc;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.14), 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.20);
-    border-radius: 50%;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.close-button:hover,
-.close-button:focus {
-    background-color: #7e7e9c;
 }
 
 .close-icon {
     position: relative;
-    width: 16px;
-    height: 16px;
+    width: 24px;
+    height: 24px;
 }
 
 .close-icon use {
@@ -746,17 +799,17 @@ img {
     letter-spacing: 0.02em;
     color: #2e2f42;
     text-align: center;
-    margin-bottom: 24px;
+    margin-bottom: 20px;
 }
 
 .modal-form .form-group {
-    margin-bottom: 24px;
+    margin-bottom: 15px;
     text-align: left;
 }
 
 .modal-form .form-group label {
     display: block;
-    margin-bottom: 8px;
+    margin-bottom: 5px;
     font-size: 14px;
     color: #333;
 }
@@ -777,6 +830,7 @@ img {
 
 .input-wrapper input {
     padding-left: 40px;
+    
 }
 
 .input-wrapper input:focus+.icon,
@@ -806,6 +860,7 @@ img {
     justify-content: flex-start;
     margin-top: 10px;
     margin-left: 8px;
+    
 }
 
 .modal-form .form-group.checkbox-group input {
@@ -817,6 +872,7 @@ img {
     color: #333;
     margin-bottom: 0;
     line-height: normal;
+   
 }
 
 .modal-form .form-group.checkbox-group a {
