--- a/css/styles.css
+++ b/css/styles.css
@@ -591,6 +591,15 @@ img {
 
 /* Стилі для футера */
 
+.footer-subscribe p {
+    margin-bottom: 16px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+}
+
 .social-icon-item-footer a:hover,
 .social-icon-item-footer a:focus {
     background-color: #31d0aa;
