--- a/css/styles.css
+++ b/css/styles.css
@@ -590,35 +590,20 @@ img {
 }
 
 /* Стилі для футера */
-
-.footer-subscribe p {
-    margin-bottom: 16px;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #ffffff;
-}
-
-.social-icon-item-footer a:hover,
-.social-icon-item-footer a:focus {
-    background-color: #31d0aa;
-}
-
 .footer {
     background-color: #2e2f42;
     padding: 100px 0;
-   
 }
 
 .footer .container {
     display: flex;
-    align-items: baseline;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
 .footer-content {
-    margin-right: 120;
-
+    margin-right: 120px;
 }
 
 .footer-logo {
@@ -642,12 +627,13 @@ img {
     font-weight: 400;
     line-height: 24px;
     letter-spacing: 0.02em;
-    color: #F4F4FD;
+    color: #f4f4fd;
     max-width: 264px;
-    
 }
 
-
+.footer-social {
+    margin-right: 120px;
+}
 
 .footer-social-text {
     font-size: 16px;
@@ -655,10 +641,15 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     margin-bottom: 16px;
-    color: #FFFFFF;
+    color: #ffffff;
 }
 
-
+.social-icons-footer {
+    display: flex;
+    gap: 16px;
+    padding: 0;
+    list-style: none;
+}
 
 .social-icon-item-footer {
     display: flex;
@@ -685,57 +676,65 @@ img {
     fill: #ffffff;
 }
 
-:root {
-    --icon-fill-color: #f4f4fd;
-}
-
-.icon-footer {
-    width: 24px;
-    height: 24px;
-    fill: var(--icon-fill-color);
-}
-
-.footer .social-icon:hover .icon {
-    fill: #404bbf;
-   
-}
-
-
-.social-icons-footer {
+.footer-subscribe {
     display: flex;
-    justify-content: center;
-    gap: 16px;
-    
-    padding: 0;
-    
-    list-style: none;
-    
+    flex-direction: column;
+    gap: 24px;
 }
 
-.social-icon-item-footer {
+.footer-subscribe p {
+    margin-bottom: 16px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+}
+
+.subscribe-form {
     display: flex;
+    gap: 24px;
 }
 
-.social-icon-footer {
-    width: 40px;
+.subscribe-form label {
+    font-size: 14px;
+    margin-right: 8px;
+}
+
+.subscribe-form input {
+    width: 264px;
     height: 40px;
-    background-color: #4d5ae5;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: background-color 0.3s;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border: 1px solid #ffffff;
+    background-color: transparent;
+    padding: 0 8px;
+    color: #ffffff;
 }
 
-.social-icon-footer:hover {
+.subscribe-form input[type="email"]::placeholder {
+    color: #ffffff;
+}
+
+.subscribe-form input:focus {
+    border-color: #4d5ae5;
+    outline: none;
+}
+
+.subscribe-button {
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    background-color: #4d5ae5;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: block;
+}
+
+.subscribe-button:hover,
+.subscribe-button:focus {
     background-color: #404bbf;
 }
-.footer-content {
-    margin-right: 120px;
-}
-
-
 
 
 
