--- a/css/styles.css
+++ b/css/styles.css
@@ -599,6 +599,16 @@ img {
     letter-spacing: 0.02em;
     color: #ffffff;
 }
+.subscribe-button {
+    font-weight: 500;
+    letter-spacing: 0.04em;
+    line-height: 1.5;
+    color: #ffffff;
+    cursor: pointer;
+    border: none;
+    border-radius: 4px;
+
+}
 
 .social-icon-item-footer a:hover,
 .social-icon-item-footer a:focus {
