--- a/css/styles.css
+++ b/css/styles.css
@@ -607,6 +607,12 @@ img {
     cursor: pointer;
     border: none;
     border-radius: 4px;
+    min-width: 165px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 
 }
 
