--- a/css/styles.css
+++ b/css/styles.css
@@ -622,7 +622,21 @@ img {
     gap: 24px;
 
 }
+.subscribe-input  {
+    width: 264px;
+    height: 40px;
+    border: 1px solid #ffffff;
+    background-color: transparent;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    padding-left: 16px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    color: #ffffff;
 
+
+ }
 
 
 .social-icon-item-footer a:hover,
