--- a/css/styles.css
+++ b/css/styles.css
@@ -623,7 +623,13 @@ img {
 
 }
 
+.subscribe-input  {
+    width: 264px;
+    height: 40px;
+    border: 1px solid #ffffff;
+    background-color: transparent;
 
+ }
 
 .social-icon-item-footer a:hover,
 .social-icon-item-footer a:focus {
