--- a/css/styles.css
+++ b/css/styles.css
@@ -771,11 +771,12 @@ img {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
     display: none;
     justify-content: center;
     align-items: center;
     z-index: 1000;
+    background-color: rgba(46, 47, 66, 0.4)
 }
 
 .backdrop.is-open {
