--- a/css/styles.css
+++ b/css/styles.css
@@ -789,9 +789,11 @@ img {
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     min-width: 408px;
-    
-    position: relative;
     text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    
 }
 
 .close-button {
