--- a/css/styles.css
+++ b/css/styles.css
@@ -787,10 +787,15 @@ img {
     background-color: #fff;
     padding: 72px 24px 24px;
     border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    min-width: 408px;
+    
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    width: 408px;
+    min-height: 584px;
+    background: #fcfcfc;
     text-align: center;
     position: absolute;
+    border-radius: 4px;
     top: 50%;
     left: 50%;
     
