--- a/css/styles.css
+++ b/css/styles.css
@@ -965,7 +965,11 @@ img {
 
 .modal-submit-button {
     padding: 10px 20px;
+    justify-content: center;
+    background-color: #e7e9fc;
+    border: 1px solid rgba(0, 0, 0, 0.1);
     font-size: 16px;
+    align-items: center;
     cursor: pointer;
     background-color: #4d5ae5;
     color: white;
@@ -974,6 +978,13 @@ img {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     display: block;
     margin: 20px auto 0;
+    top: 24px;
+    right: 24px;
+    height: 24px;
+    border-radius: 50%;
+    display: flex;
+    width: 24px
+    
 }
 
 .modal-submit-button:hover,
