--- a/css/styles.css
+++ b/css/styles.css
@@ -827,6 +827,7 @@ img {
     position: relative;
     width: 8px;
     height: 8px;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .close-icon use {
@@ -840,8 +841,9 @@ img {
 
 .close-button:hover .close-icon use,
 .close-button:focus .close-icon use {
-    fill: #404bbf;
     border: none;
+    fill: #ffffff
+   
 }
 
 .modal-title {
@@ -976,7 +978,7 @@ img {
 
 
 .modal-submit-button {
-    Padding: 16px,32px,16px,32px;
+    padding: 16px,32px,16px,32px;
     font-size: 16px;
     gap: 10px;
     width: 169px;
