--- a/css/styles.css
+++ b/css/styles.css
@@ -895,12 +895,14 @@ img {
 .modal-form .form-group label {
     display: block;
     font-weight: 400;
-    font-size: 12px;
+    
     line-height: 14px;
-    margin-bottom: 5px;
+    margin-bottom: 4px;
     letter-spacing: 0.04em;
     font-size: 14px;
     color: #8E8F99;
+    line-height: 1.17;
+    font-size: 12px;
 }
 
 .input-wrapper {
@@ -922,6 +924,9 @@ img {
 
 .input-wrapper input {
     padding-left: 40px;
+    width: 100%;
+    background-color: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 
@@ -947,6 +952,12 @@ img {
     fill: #4d5ae5;
     /* Колір іконки при фокусі */
 }
+
+
+
+
+
+
 
 .modal-form .form-group input,
 .modal-form .form-group textarea {
