--- a/css/styles.css
+++ b/css/styles.css
@@ -908,6 +908,7 @@ img {
 .input-wrapper {
     position: relative;
     height: 40px;
+    width: 100%;
     border: 1px solid rgba(46, 47, 66, 0.4);
 
 }
@@ -927,6 +928,7 @@ img {
     width: 100%;
     background-color: transparent;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
     
 }
 
