--- a/css/styles.css
+++ b/css/styles.css
@@ -915,9 +915,10 @@ img {
 
 .input-wrapper .icon {
     position: absolute;
-    left: 10px;
+    left: 16px;
     top: 50%;
     transform: translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     width: 20px;
     height: 20px;
     fill: #ccc;
