--- a/css/styles.css
+++ b/css/styles.css
@@ -911,6 +911,7 @@ img {
     width: 100%;
     border: 1px solid rgba(46, 47, 66, 0.4);
     top: 50%;
+    margin-bottom: 16px;
 
 }
 
@@ -958,7 +959,28 @@ img {
 }
 
 
-
+.form-input {
+    width: 100%;
+    height: 120px;
+    border-radius: 4px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    padding: 8px 16px;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    resize: none;
+    color: rgba(46, 47, 66, 0.4);
+    border: 1px solid #ccc;
+    outline: transparent;
+    padding: 8px;
+    box-sizing: border-box;
+    border-radius: 4px;
+    margin-bottom: 16px;
+    font-family: inherit;
+    resize: none;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    background-color: transparent;
+}
 
 
 
