--- a/css/styles.css
+++ b/css/styles.css
@@ -795,7 +795,7 @@ img {
     text-decoration: underline;
 }
 .backdrop {
-    position: fixed;
+    
     top: 0;
     left: 0;
     width: 100%;
@@ -959,7 +959,7 @@ img {
 }
 
 
-.form-group .form-input {
+.form-input {
     width: 100%;
     height: 120px;
     border-radius: 4px;
