--- a/css/styles.css
+++ b/css/styles.css
@@ -832,14 +832,17 @@ img {
 
 .textarea-input {
     width: 100%;
+    font-size: 12px;
     height: 120px;
     border: 1px solid rgba(46, 47, 66, 0.4);
-    background-color: rgba(255, 255, 255, 0.1);
-    padding: 8px;
+    color: rgba(46, 47, 66, 0.4);
+    background-color: transparent;
+    padding: 8px 16px;
     color: #2e2f42;
-    font-size: 12px;
+    
     line-height: 1.17;
     letter-spacing: 0.04em;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     resize: none;
 }
 
