--- a/css/styles.css
+++ b/css/styles.css
@@ -839,11 +839,12 @@ img {
     background-color: transparent;
     padding: 8px 16px;
     color: #2e2f42;
-    
+    width: 100%;
     line-height: 1.17;
     letter-spacing: 0.04em;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     resize: none;
+    height: 120px;
 }
 
 .textarea-input:focus {
