--- a/css/styles.css
+++ b/css/styles.css
@@ -590,117 +590,179 @@ img {
 }
 
 /* Стилі для футера */
+
+.footer-subscribe p {
+    margin-bottom: 16px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+}
+.subscribe-button {
+    font-weight: 500;
+    letter-spacing: 0.04em;
+    line-height: 1.5;
+    color: #ffffff;
+    cursor: pointer;
+    border: none;
+    border-radius: 4px;
+    min-width: 165px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #4D5AE5
+
+
+}
+
+.subscribe-form  {
+    display: flex;
+    gap: 24px;
+
+}
+
+
+
+.social-icon-item-footer a:hover,
+.social-icon-item-footer a:focus {
+    background-color: #31d0aa;
+}
+
 .footer {
-    padding: 72px 24px;
+    background-color: #2e2f42;
+    padding: 100px 0;
+   
+}
+
+.footer .container {
+    display: flex;
+    align-items: baseline;
 }
 
 .footer-content {
-    margin-bottom: 48px;
+    margin-right: 120;
+
 }
 
 .footer-logo {
-    font-size: 28px;
+    font-family: 'Raleway', sans-serif;
+    font-size: 18px;
+    line-height: 21px;
     font-weight: 700;
-    color: #000;
+    color: #4d5ae5;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    display: block;
+    margin-bottom: 16px;
 }
 
 .footer-logo-color {
-    color: #ff6b08;
+    color: #f4f4fd;
 }
 
 .footer-description {
     font-size: 16px;
-    color: #4a4a4a;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.02em;
+    color: #F4F4FD;
+    max-width: 264px;
+    
 }
 
-.footer-social {
-    margin-bottom: 24px;
-}
+
 
 .footer-social-text {
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 500;
-    color: #000;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
     margin-bottom: 16px;
+    color: #FFFFFF;
 }
 
-.social-icons-footer {
-    display: flex;
-    gap: 16px;
-}
+
 
 .social-icon-item-footer {
-    list-style: none;
+    display: flex;
 }
 
 .social-icon-footer {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
     width: 40px;
     height: 40px;
-    background-color: #f0f0f0;
+    background-color: #4d5ae5;
     border-radius: 50%;
-    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 0.3s;
+}
+
+.social-icon-footer:hover {
+    background-color: #404bbf;
 }
 
 .icon-footer {
-    fill: #000;
+    width: 24px;
+    height: 24px;
+    fill: #ffffff;
 }
 
-.footer-subscribe {
-    margin-top: 48px;
+:root {
+    --icon-fill-color: #f4f4fd;
 }
 
-.subscribe-title {
-    font-size: 18px;
-    font-weight: 500;
-    color: #000;
-    margin-bottom: 16px;
+.icon-footer {
+    width: 24px;
+    height: 24px;
+    fill: var(--icon-fill-color);
 }
 
-.subscribe-form {
+.footer .social-icon:hover .icon {
+    fill: #404bbf;
+   
+}
+
+
+.social-icons-footer {
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     gap: 16px;
+    
+    padding: 0;
+    
+    list-style: none;
+    
 }
 
-.subscribe-label {
-    font-size: 14px;
-    color: #4a4a4a;
+.social-icon-item-footer {
+    display: flex;
 }
 
-.subscribe-input {
-    width: 100%;
-    padding: 12px;
-    border: 1px solid #dcdcdc;
-    border-radius: 4px;
-    font-size: 14px;
-    color: #4a4a4a;
-}
-
-.subscribe-button {
+.social-icon-footer {
+    width: 40px;
+    height: 40px;
+    background-color: #4d5ae5;
+    border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
-    min-width: 165px;
-    height: 40px;
-    background-color: #4d5ae5;
-    border: none;
-    border-radius: 4px;
-    font-family: "Roboto", sans-serif;
-    font-size: 16px;
-    font-weight: 500;
-    color: #ffffff;
-    cursor: pointer;
+    transition: background-color 0.3s;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.subscribe-icon {
-    margin-left: 8px;
-    width: 16px;
-    height: 16px;
-    fill: #ffffff;
+.social-icon-footer:hover {
+    background-color: #404bbf;
 }
+.footer-content {
+    margin-right: 120px;
+}
+
+
+
+
 
 /* Modal Styles */
 .visually-hidden {
