--- a/css/styles.css
+++ b/css/styles.css
@@ -921,7 +921,7 @@ img {
     border: 1px solid rgba(46, 47, 66, 0.4);
     color: rgba(46, 47, 66, 0.4);
     background-color: transparent;
-    padding: 8px 16px;
+    
     color: #2e2f42;
     width: 100%;
     line-height: 1.17;
@@ -1095,6 +1095,7 @@ img {
 .modal-form .form-group textarea {
     width: calc(100% - 16px);
     padding: 8px 16px;
+    height: 120px;
     margin: 0 8px;
     border: 1px solid #ccc;
     border-radius: 4px;
