--- a/css/styles.css
+++ b/css/styles.css
@@ -939,6 +939,9 @@ img {
     border-radius: 50%;
     border: 1px solid rgba(0, 0, 0, 0.1);
     background: #e7e9fc;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     
    
@@ -981,7 +984,7 @@ img {
 .close-button:hover .close-icon use,
 .close-button:focus .close-icon use {
     border: none;
-    fill: #ffffff
+    fill: #404bbf
    
 }
 
