--- a/css/styles.css
+++ b/css/styles.css
@@ -1060,7 +1060,7 @@ img {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     width: 20px;
     height: 20px;
-    fill: #ccc;
+    fill: #2E2F42;
 }
 
 .modal-form .icon:hover,
